--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -30,6 +30,15 @@ html {
     background-color: var(--gray-7);
 }
 
+
+.top-tour,
+.travel-card,
+.popular-container,
+.gem-container,
+.footer {
+    padding: 0px 20px;
+}
+
 /* travel top */
 
 .travel-container {
@@ -39,21 +48,21 @@ html {
 
 .travel-top {
     width: 100%;
-    display: flex;
-    padding: 16px 8px 16px 503px;
+    padding: 16px 8px;
     flex-direction: column;
     align-items: center;
     gap: 10px;
     background-color: var(--white-color);
     box-shadow: 0px 6px 30px 0px rgba(15, 15, 15, 0.06);
     margin-bottom: 70px;
+    position: relative;
 }
 
 .travel-top__list-item  {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 20px;
 }
 
@@ -66,7 +75,7 @@ html {
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
-    background-color: var(--gray-7);
+    background-color: var(--gray-5);
     color: var(--gray-3);
     cursor: pointer;
 }
@@ -77,18 +86,17 @@ html {
 }
 
 .travel-top__close {
-    position: relative;
-    flex-grow: 1;
-}
-
-.travel-top__close-icon {
     position: absolute;
-    right: 0;
+    top: 16px;
+    right: 8px;
     width: 24px;
     height: 24px;
     cursor: pointer;
 }
 
+.travel-top__close-icon {
+
+}
 /* travel card */
 
 .travel-card {
@@ -109,6 +117,7 @@ html {
     justify-content: center;
     gap: 30px;
     padding: 30px 56px 30px 28px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.08);
 }
 
 .card__image {
@@ -136,6 +145,7 @@ html {
     opacity: 0.8;
     padding: 8px 12px;
     border-radius: 4px;
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.2);;
 }
 
 .card__image-next:hover {
@@ -144,7 +154,7 @@ html {
 }
 
 .card__body {
-    /* width: 100%; */
+
 }
 
 .card__body-name {
@@ -218,6 +228,7 @@ html {
 .card__body-description {
     margin-top: 9px;
     color: var(--gray-3);
+    text-align: justify;
 }
 
 .card__body-date {
@@ -347,6 +358,7 @@ html {
 }
 
 .top-tour__item-duration {
+    font-size: 14px;
     color: var(--gray-2);
     line-height: 20px;
 }
@@ -574,12 +586,14 @@ html {
 }
 
 .footer-top-list {
+    --gap: 152px;
+    --width-first-card: 268px;
     display: flex;
-    gap: 152px;
+    gap: var(--gap);
 }
 
 .footer-top__item:first-child {
-    width: 268px;
+    width: var(--width-first-card);
 }
 
 .footer-top__item {
